@@ -1,0 +1,18 @@
+	.syntax unified
+	.text
+	dsb ld
+	dsb ishld
+	dsb nshld
+	dsb oshld
+	dmb ld
+	dmb ishld
+	dmb nshld
+	dmb oshld
+	dsb LD
+	dsb ISHLD
+	dsb NSHLD
+	dsb OSHLD
+	dmb LD
+	dmb ISHLD
+	dmb NSHLD
+	dmb OSHLD
