@@ -1,5 +1,11 @@
 2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
 
+	* gas/arm/armv8-a-barrier.s: New testcase.
+	* gas/arm/armv8-a-barrier-arm.d: Likewise.
+	* gas/arm/armv8-a-barrier-thumb.d: Likewise.
+
+2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
 	* gas/arm/armv8-a-bad.l: Update
 	* gas/arm/armv8-a-bad.s: Likewise.
 
